--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#fafafa</color>
-    <color name="colorPrimaryLight">#ffffff</color>
-    <color name="colorPrimaryDark">#c7c7c7</color>
-    <color name="colorAccent">#b0bec5</color>
+    <color name="colorPrimary">@color/teal_500</color>
+    <color name="colorPrimaryLight">@color/teal_300</color>
+    <color name="colorPrimaryDark">@color/teal_700</color>
+    <color name="colorAccent">@color/orange_500</color>
 
-    <color name="dialog_choose_icon_color">#757575</color>
-    <color name="dialog_choose_text_color">#757575</color>
+    <color name="ucrop_color_toolbar">@color/teal_500</color>
+    <color name="ucrop_color_statusbar">@color/teal_700</color>
+    <color name="ucrop_color_widget_active">@color/teal_500</color>
+
+    <color name="dialog_choose_icon_color">@color/grey_600</color>
+    <color name="dialog_choose_text_color">@color/grey_600</color>
 
 </resources>
