--- a/sample/src/main/res/layout/content_profile.xml
+++ b/sample/src/main/res/layout/content_profile.xml
@@ -5,7 +5,7 @@
                 android:layout_height="150dp"
                 android:layout_gravity="center">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <android.support.v7.widget.AppCompatImageView
             android:id="@+id/imgProfile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -16,7 +16,7 @@
             android:scaleType="centerInside"
             android:background="@drawable/shape_ring"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_add_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
