Fixed gallery image pick issue
- Sample app made compatible with Android Kitkat 4.4+ (API 19)
-  Fixed Uri to File Conversion issue [#8](https://github.com/Dhaval2404/ImagePicker/issues/8)

--- a/sample/src/main/res/layout/content_gallery_only.xml
+++ b/sample/src/main/res/layout/content_gallery_only.xml
@@ -38,8 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_margin="10dp"
         android:src="@drawable/outline_cloud_upload_white_24"
+        app:useCompatPadding="true"
         app:backgroundTint="@color/colorPrimary"
         app:tint="@color/white" />
 
