--- a/sample/src/main/res/layout/content_camera_only.xml
+++ b/sample/src/main/res/layout/content_camera_only.xml
@@ -36,9 +36,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_margin="10dp"
         android:src="@drawable/outline_cloud_upload_white_24"
         app:backgroundTint="@color/colorPrimary"
+        app:useCompatPadding="true"
         app:tint="@color/white" />
 
 </android.support.v7.widget.CardView>
