--- a/sample/src/main/res/layout/content_profile.xml
+++ b/sample/src/main/res/layout/content_profile.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
                 android:layout_gravity="center">
 
     <android.support.v7.widget.AppCompatImageView
@@ -11,7 +11,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_margin="4dp"
+            android:layout_margin="16dp"
             android:layout_gravity="center"
             android:scaleType="centerInside"
             android:background="@drawable/shape_ring"/>
@@ -23,7 +23,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             app:backgroundTint="@color/colorPrimary"
-            android:layout_margin="4dp"
+            app:useCompatPadding="true"
             android:src="@drawable/outline_cloud_upload_white_24"
             app:tint="@color/white"/>
 
