--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="ucrop_color_toolbar">@color/teal_500</color>
     <color name="ucrop_color_statusbar">@color/teal_700</color>
     <color name="ucrop_color_widget_active">@color/teal_500</color>
+    <color name="ucrop_color_toolbar_widget">#fff</color>
 
     <color name="dialog_choose_icon_color">@color/grey_600</color>
     <color name="dialog_choose_text_color">@color/grey_600</color>
