--- a/sample/src/main/res/menu/menu_main.xml
+++ b/sample/src/main/res/menu/menu_main.xml
@@ -1,9 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.github.dhaval2404.imagepicker.sample.MainActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context="com.github.dhaval2404.imagepicker.sample.MainActivity">
+
+    <item
+            android:id="@+id/action_github"
+            android:orderInCategory="100"
+            android:title="@string/action_github"
+            android:icon="@drawable/ic_github"
+            app:showAsAction="always" />
+
 </menu>
