--- a/sample/src/main/res/layout/content_camera_only.xml
+++ b/sample/src/main/res/layout/content_camera_only.xml
@@ -11,34 +11,44 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <android.support.v7.widget.AppCompatTextView
+    <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="@string/action_camera_only"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+            android:layout_height="match_parent">
 
         <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/imgCamera"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/grey_50"
-            android:scaleType="centerCrop" />
-    </LinearLayout>
+                android:id="@+id/imgCameraCode"
+                style="@style/ImageButtonStyle"
+                android:layout_alignParentEnd="true"
+                android:onClick="showImageCode"
+                app:srcCompat="@drawable/outline_code_24" />
+
+        <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/imgCameraInfo"
+                style="@style/ImageButtonStyle"
+                android:onClick="showImageInfo"
+                android:layout_toStartOf="@id/imgCameraCode"
+                app:srcCompat="@drawable/outline_info_24" />
+
+        <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/txtCamera"
+                style="@style/TitleTextStyle"
+                android:text="@string/action_camera_only" />
+
+        <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/imgCamera"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/txtCamera"
+                android:onClick="showImage"
+                android:background="@color/grey_50"
+                android:scaleType="centerCrop" />
+
+    </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_add_camera_photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:src="@drawable/outline_cloud_upload_white_24"
-        app:backgroundTint="@color/colorPrimary"
-        app:useCompatPadding="true"
-        app:tint="@color/white" />
+            android:id="@+id/fab_add_camera_photo"
+            android:onClick="pickCameraImage"
+            app:srcCompat="@drawable/baseline_photo_camera_24"
+            style="@style/FabStyle" />
 
 </android.support.v7.widget.CardView>
