--- a/imagepicker/src/main/res/xml/image_picker_provider_paths.xml
+++ b/imagepicker/src/main/res/xml/image_picker_provider_paths.xml
@@ -6,4 +6,7 @@
     <files-path
         name="internal_files"
         path="." />
+    <cache-path
+        name="cache_files"
+        path="." />
 </paths>
