Added new Android Activity Result API
- Added two functions to be called with the new Result API
- Gradle wrapper update
- Gradle Dependencies update

--- a/sample/src/main/res/layout/content_main.xml
+++ b/sample/src/main/res/layout/content_main.xml
@@ -21,6 +21,13 @@
 
             <include layout="@layout/content_profile" />
 
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_add_new_api"
+                style="@style/FabStyle"
+                android:onClick="pickProfileImageNewApiBoth"
+                app:srcCompat="@drawable/baseline_photo_24"
+                tools:ignore="ContentDescription" />
+
             <include layout="@layout/content_gallery_only" />
 
             <include layout="@layout/content_camera_only" />
