fix[sample]: Code cleanup (Setup onClick listeners explicitly in code)

--- a/sample/src/main/res/layout/content_camera_only.xml
+++ b/sample/src/main/res/layout/content_camera_only.xml
@@ -15,41 +15,42 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
             android:id="@+id/imgCameraCode"
             style="@style/ImageButtonStyle"
             android:layout_alignParentEnd="true"
-            android:onClick="showImageCode"
-            app:srcCompat="@drawable/outline_code_24" />
+            app:srcCompat="@drawable/outline_code_24"
+            tools:ignore="ContentDescription" />
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
             android:id="@+id/imgCameraInfo"
             style="@style/ImageButtonStyle"
             android:layout_toStartOf="@id/imgCameraCode"
-            android:onClick="showImageInfo"
-            app:srcCompat="@drawable/outline_info_24" />
+            app:srcCompat="@drawable/outline_info_24"
+            tools:ignore="ContentDescription" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:id="@+id/txtCamera"
             style="@style/TitleTextStyle"
             android:layout_toStartOf="@id/imgCameraInfo"
-            android:text="@string/action_camera_only" />
+            android:text="@string/action_camera_only"
+            tools:ignore="ContentDescription" />
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
             android:id="@+id/imgCamera"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/txtCamera"
             android:background="@color/grey_50"
-            android:onClick="showImage"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_camera_photo"
         style="@style/FabStyle"
-        android:onClick="pickCameraImage"
-        app:srcCompat="@drawable/baseline_photo_camera_24" />
+        app:srcCompat="@drawable/baseline_photo_camera_24"
+        tools:ignore="ContentDescription" />
 
 </androidx.cardview.widget.CardView>
