--- a/sample/src/main/res/layout/content_gallery_only.xml
+++ b/sample/src/main/res/layout/content_gallery_only.xml
@@ -15,41 +15,41 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
             android:id="@+id/imgGalleryCode"
             style="@style/ImageButtonStyle"
             android:layout_alignParentEnd="true"
-            android:onClick="showImageCode"
-            app:srcCompat="@drawable/outline_code_24" />
+            app:srcCompat="@drawable/outline_code_24"
+            tools:ignore="ContentDescription" />
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
             android:id="@+id/imgGalleryInfo"
             style="@style/ImageButtonStyle"
             android:layout_toStartOf="@id/imgGalleryCode"
-            android:onClick="showImageInfo"
-            app:srcCompat="@drawable/outline_info_24" />
+            app:srcCompat="@drawable/outline_info_24"
+            tools:ignore="ContentDescription" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:id="@+id/txtGallery"
             style="@style/TitleTextStyle"
             android:layout_toStartOf="@id/imgGalleryInfo"
             android:text="@string/action_gallery_only" />
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
             android:id="@+id/imgGallery"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/txtGallery"
             android:background="@color/grey_50"
-            android:onClick="showImage"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_gallery_photo"
         style="@style/FabStyle"
-        android:onClick="pickGalleryImage"
-        app:srcCompat="@drawable/baseline_photo_24" />
+        app:srcCompat="@drawable/baseline_photo_24"
+        tools:ignore="ContentDescription" />
 
 </androidx.cardview.widget.CardView>
