--- a/sample/src/main/res/layout/content_profile.xml
+++ b/sample/src/main/res/layout/content_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center">
@@ -10,7 +11,7 @@
         android:layout_height="180dp"
         android:layout_centerInParent="true">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
             android:id="@+id/imgProfile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -19,37 +20,37 @@
             android:layout_gravity="center"
             android:layout_margin="16dp"
             android:background="@drawable/profile_bg"
-            android:onClick="showImage"
             android:padding="3dp"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_person" />
+            app:srcCompat="@drawable/ic_person"
+            tools:ignore="ContentDescription" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_add_photo"
             style="@style/FabStyle"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:onClick="pickProfileImage" />
+            tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <ImageView
         android:id="@+id/imgProfileCode"
         style="@style/ImageButtonStyle"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:onClick="showImageCode"
-        app:srcCompat="@drawable/outline_code_24" />
+        app:srcCompat="@drawable/outline_code_24"
+        tools:ignore="ContentDescription" />
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <ImageView
         android:id="@+id/imgProfileInfo"
         style="@style/ImageButtonStyle"
         android:layout_below="@id/imgProfileCode"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        android:onClick="showImageInfo"
-        app:srcCompat="@drawable/outline_info_24" />
+        app:srcCompat="@drawable/outline_info_24"
+        tools:ignore="ContentDescription" />
 
 </RelativeLayout>
