--- a/sample/src/main/res/layout/dialog_imageviewer.xml
+++ b/sample/src/main/res/layout/dialog_imageviewer.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <ImageView
         android:id="@+id/codeImg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        app:srcCompat="@drawable/img_profile_code" />
+        app:srcCompat="@drawable/img_profile_code"
+        tools:ignore="ContentDescription" />
 
 </LinearLayout>
