--- a/sample/src/main/res/layout/content_gallery_only.xml
+++ b/sample/src/main/res/layout/content_gallery_only.xml
@@ -19,14 +19,14 @@
             android:id="@+id/imgGalleryCode"
             style="@style/ImageButtonStyle"
             android:layout_alignParentEnd="true"
-            app:srcCompat="@drawable/outline_code_24"
+            android:src="@drawable/outline_code_24"
             tools:ignore="ContentDescription" />
 
         <ImageView
             android:id="@+id/imgGalleryInfo"
             style="@style/ImageButtonStyle"
             android:layout_toStartOf="@id/imgGalleryCode"
-            app:srcCompat="@drawable/outline_info_24"
+            android:src="@drawable/outline_info_24"
             tools:ignore="ContentDescription" />
 
         <TextView
@@ -49,7 +49,7 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_gallery_photo"
         style="@style/FabStyle"
-        app:srcCompat="@drawable/baseline_photo_24"
+        android:src="@drawable/baseline_photo_24"
         tools:ignore="ContentDescription" />
 
 </androidx.cardview.widget.CardView>
