--- a/sample/src/main/res/layout/content_profile.xml
+++ b/sample/src/main/res/layout/content_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -22,7 +21,7 @@
             android:background="@drawable/profile_bg"
             android:padding="3dp"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_person"
+            android:src="@drawable/ic_person"
             tools:ignore="ContentDescription" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -40,7 +39,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        app:srcCompat="@drawable/outline_code_24"
+        android:src="@drawable/outline_code_24"
         tools:ignore="ContentDescription" />
 
     <ImageView
@@ -50,7 +49,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        app:srcCompat="@drawable/outline_info_24"
+        android:src="@drawable/outline_info_24"
         tools:ignore="ContentDescription" />
 
 </RelativeLayout>
