--- a/sample/src/main/res/layout/dialog_imageviewer.xml
+++ b/sample/src/main/res/layout/dialog_imageviewer.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        app:srcCompat="@drawable/img_profile_code"
+        android:src="@drawable/img_profile_code"
         tools:ignore="ContentDescription" />
 
 </LinearLayout>
