feat[sample]: Material You

--- a/sample/src/main/res/drawable/ic_person.xml
+++ b/sample/src/main/res/drawable/ic_person.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="196dp"
         android:height="196dp"
-        android:tint="@color/grey_700"
+        android:tint="?colorControlNormal"
         android:viewportWidth="24"
         android:viewportHeight="24">
     <path
